-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.4.0, 6.4.2, 6.5.1, 6.5.2
-
None
-
NXP i.MX 8M Plus 5.15-kirkstone
-
-
6c580d28a (dev), d36e6657d (6.6), c29f54d39 (tqtc/lts-6.2), 2b97294c8 (6.5)
When no input device (mouse, keyboard, camera) is connected and using TextField in Qt Quick, the program crashes during startup.
Once an input device is connected, everything works normally.
Note: I did not encounter this issue in Qt 6.3.2.
310show version 311show debug-file-directory 312set breakpoint pending on 313set print elements 10000 314set index-cache on 315set unwindonsignal on 316set width 0 317set height 0 Setting up inferior... 318set sysroot /opt/fsl-imx-xwayland/5.15-kirkstone/sysroots/armv8a-poky-linux 319set substitute-path /usr/src /opt/fsl-imx-xwayland/5.15-kirkstone/sysroots/armv8a-poky-linux/usr/src 320python sys.path.insert(1, '/home/ubuntu/Qt/Tools/QtCreator/share/qtcreator/debugger/') 321python sys.path.append('/opt/fsl-imx-xwayland/5.15-kirkstone/sysroots/x86_64-pokysdk-linux/usr/bin/aarch64-poky-linux/data-directory/python') 322python from gdbbridge import * 323python theDumper.setFallbackQtVersion({"token":323,"version":328192}) 324python theDumper.loadDumpers({"token":324}) 325-interpreter-exec console "set target-async off" 326unset environment LC_NUMERIC 327-gdb-set environment LD_LIBRARY_PATH=/home/root/qt6.4.2/lib/;/home/root/qt6.4.2/ 328-gdb-set environment QML2_IMPORT_PATH=/home/root/qt6.4.2/qml/ 329-gdb-set environment QML_IMPORT_PATH=/home/root/qt6.4.2/qml/ 330-gdb-set environment QTDIR=/home/root/qt6.4.2/ 331-gdb-set environment QT_PLUGIN_PATH=/home/root/qt6.4.2/plugins/ 332-file-exec-and-symbols "/home/ubuntu/build-TestIMX-edm_g_imx8mp_yocto4_0-Debug/appTestIMX" 333target extended-remote tcp:10.20.30.163:10000 Attached to stopped application. 334-gdb-set remote exec-file /usr/local/bin/appTestIMX Setting breakpoints... 335-exec-run Thread group i1 created. Thread 1 created. Library /lib/ld-linux-aarch64.so.1 loaded. Running. Application started. Library /home/root/qt6.4.2/lib/libQt6Quick.so.6 loaded. Library /home/root/qt6.4.2/lib/libQt6QmlModels.so.6 loaded. Library /home/root/qt6.4.2/lib/libQt6Qml.so.6 loaded. Library /home/root/qt6.4.2/lib/libQt6Network.so.6 loaded. Library /home/root/qt6.4.2/lib/libQt6OpenGL.so.6 loaded. Library /home/root/qt6.4.2/lib/libQt6Gui.so.6 loaded. Library /home/root/qt6.4.2/lib/libQt6Core.so.6 loaded. Library /usr/lib/libGLESv2.so.2 loaded. Library /usr/lib/libEGL.so.1 loaded. Library /usr/lib/libstdc++.so.6 loaded. Library /lib/libm.so.6 loaded. Library /lib/libgcc_s.so.1 loaded. Library /lib/libc.so.6 loaded. Library /usr/lib/libzstd.so.1 loaded. Library /lib/libz.so.1 loaded. Library /usr/lib/libfontconfig.so.1 loaded. Library /usr/lib/libglib-2.0.so.0 loaded. Library /home/root/qt6.4.2/lib/libQt6DBus.so.6 loaded. Library /usr/lib/libxkbcommon.so.0 loaded. Library /usr/lib/libpng16.so.16 loaded. Library /usr/lib/libharfbuzz.so.0 loaded. Library /usr/lib/libfreetype.so.6 loaded. Library /usr/lib/libicui18n.so.70 loaded. Library /usr/lib/libicuuc.so.70 loaded. Library /usr/lib/libpcre2-16.so.0 loaded. Library /usr/lib/libGAL.so loaded. Library /usr/lib/libVSC.so loaded. Library /usr/lib/libwayland-server.so.0 loaded. Library /usr/lib/libwayland-client.so.0 loaded. Library /usr/lib/libdrm.so.2 loaded. Library /usr/lib/libgbm.so.1 loaded. Library /usr/lib/libgbm_viv.so loaded. Library /usr/lib/libexpat.so.1 loaded. Library /usr/lib/libuuid.so.1 loaded. Library /usr/lib/libpcre.so.1 loaded. Library /usr/lib/libdbus-1.so.3 loaded. Library /lib/libpthread.so.0 loaded. Library /usr/lib/libicudata.so.70 loaded. Library /usr/lib/libffi.so.8 loaded. Library /lib/libsystemd.so.0 loaded. Library /lib/libcap.so.2 loaded. Library /home/root/qt6.4.2/plugins/platforms/libqwayland-generic.so loaded. Library /home/root/qt6.4.2/lib/libQt6WaylandClient.so.6 loaded. Library /usr/lib/libwayland-cursor.so.0 loaded. Thread 2 created. [New Thread 3094.3097] Library /home/root/qt6.4.2/qml/QtQml/WorkerScript/libworkerscriptplugin.so loaded. Library /home/root/qt6.4.2/lib/libQt6QmlWorkerScript.so.6 loaded. Library /home/root/qt6.4.2/qml/QtQuick/Controls/libqtquickcontrols2plugin.so loaded. Library /home/root/qt6.4.2/lib/libQt6QuickControls2.so.6 loaded. Library /home/root/qt6.4.2/lib/libQt6QuickTemplates2.so.6 loaded. Library /home/root/qt6.4.2/qml/QtQuick/Controls/Fusion/libqtquickcontrols2fusionstyleplugin.so loaded. Library /home/root/qt6.4.2/qml/QtQuick/Controls/Basic/libqtquickcontrols2basicstyleplugin.so loaded. Library /home/root/qt6.4.2/qml/QtQuick/Controls/impl/libqtquickcontrols2implplugin.so loaded. Library /home/root/qt6.4.2/lib/libQt6QuickControls2Impl.so.6 loaded. Library /home/root/qt6.4.2/plugins/wayland-graphics-integration-client/libqt-plugin-wayland-egl.so loaded. Library /home/root/qt6.4.2/lib/libQt6WaylandEglClientHwIntegration.so.6 loaded. Library /usr/lib/libwayland-egl.so.1 loaded. Library /usr/lib/libGLESv1_CM.so loaded. Library /usr/lib/libOpenVG.so loaded. Thread 3 created. [New Thread 3094.3098] Thread 4 created. [New Thread 3094.3095] Thread 5 created. [New Thread 3094.3096] Thread 6 created. [New Thread 3094.3099] Stopped. 336importPlainDumpers off Stopped: Segmentation fault (Signal SIGSEGV). 337-thread-info 338python theDumper.fetchStack({"limit":20,"nativemixed":0,"token":338}) 339set disassembly-flavor att 340-interpreter-exec console "disassemble /rs 0xfffff1bfe3d4" 341-stack-select-frame 0 342python theDumper.fetchVariables({"autoderef":1,"context":"","displaystringlimit":300,"dyntype":1,"expanded":["return","local","inspect","watch"],"fancy":1,"formats":{},"nativemixed":0,"partialvar":"","passexceptions":0,"qobjectnames":1,"resultvarname":"","stringcutoff":10000,"timestamps":0,"token":342,"typeformats":{},"watchers":[]}) 343maintenance print register-groups 344-data-list-register-values r 345-interpreter-exec console "disassemble /rs 0xfffff1bfe3c0,0xfffff1bfe438" <Rebuild Watchmodel 7 @ 14:41:14.177 [460408ms] > 346info shared 347-file-list-exec-source-files 348-data-list-register-values r 349-data-list-register-values r 350info shared
| For Gerrit Dashboard: QTBUG-114671 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 488069,3 | client: check nullptr before usage | dev | qt/qtwayland | Status: MERGED | +2 | 0 |
| 488359,2 | client: check nullptr before usage | 6.6 | qt/qtwayland | Status: MERGED | +2 | 0 |
| 488360,2 | client: check nullptr before usage | 6.5 | qt/qtwayland | Status: MERGED | +2 | 0 |
| 488402,2 | client: check nullptr before usage | tqtc/lts-6.2 | qt/tqtc-qtwayland | Status: MERGED | +2 | 0 |