client: check nullptr before usage

in QWaylandInputContext::textInput() and QWaylandInputMethodContext::textInputMethod()

Fixes: QTBUG-114671
Change-Id: I10e55f6f817a4b4d78a0262f87580d2fa2743f7b
Reviewed-by: David Edmundson <davidedmundson@kde.org>
(cherry picked from commit 6c580d28a50effb5808d118f29e050d35ccf852a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>