src/client/qwaylandinputcontext.cpp
@@ -578,7 +578,7 @@ void QWaylandInputContext::setFocusObject(QObject *object)
 
 QWaylandTextInput *QWaylandInputContext::textInput() const
 {
-    return mDisplay->defaultInputDevice()->textInput();
+    return mDisplay->defaultInputDevice() ? mDisplay->defaultInputDevice()->textInput() : nullptr;
 }
 
 #if QT_CONFIG(xkbcommon)
